--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&family=Syncopate:wght@400;700&display=swap"
       rel="stylesheet" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/all-site.css" />
+    <link rel="stylesheet" href="css/home.css" />
   </head>
   <body>
     <!--Header Start-->
@@ -372,15 +373,15 @@
       </div>
       <!--send mail End-->
       <div class="bottom-footer">
-        <div class="row container mx-auto py-5 mid">
-          <div class="col col-12 row">
-            <div class="col col-6 row">
-              <div class="links row col col-6">
+        <div class="row gx-0 container mx-auto py-5 mid px-0">
+          <div class="col col-12 row gx-0 justify-content-between">
+            <div class="col col-6 gx-0 row justify-content-between">
+              <div class="links row gx-0 col col-6">
                 <a href="">Client</a>
                 <a href="">Work</a>
                 <a href="">About Us</a>
               </div>
-              <div class="social-links row col col-6">
+              <div class="social-links row gx-0 col col-6">
                 <a href="">
                   <i class="fa-brands fa-facebook-f"></i>
                   <span>Facebook</span>
@@ -395,7 +396,8 @@
                 </a>
               </div>
             </div>
-            <div class="col col-6 row align-items-center justify-content-end">
+            <div
+              class="col col-6 row gx-0 align-items-center justify-content-end">
               <div class="logo">
                 <img src="images/Shade-box-logo.png" alt="" />
               </div>
