--- a/meeting.html
+++ b/meeting.html
@@ -4,20 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      .meeting {
+        text-align: center;
+        font-size: 20px;
+      }
+      .meeting a {
+        text-decoration: underline;
+        color: blue;
+      }
+    </style>
   </head>
   <body>
     <div style="height: 700px" id="jitsi-container"></div>
+    <div class="meeting">
+      Meeting URL is:
+      <a id="meeting-url"></a>
+    </div>
     <script src="https://meet.jit.si/external_api.js"></script>
     <script>
       var domain = "meet.jit.si";
+      let meetingName = generateRandomText(10);
       var options = {
-        roomName: "Meeting Number" + generateRandomText(10),
+        roomName: "Meeting Number" + meetingName,
         width: "100%",
         height: "100%",
         parentNode: document.querySelector("#jitsi-container"),
       };
       var api = new JitsiMeetExternalAPI(domain, options);
-      console.log(api);
+      let meetingURL =
+        "https://meet.jit.si/Meeting%20Number" +
+        encodeURIComponent(meetingName);
+      document.getElementById("meeting-url").innerText = meetingURL;
+      document.getElementById("meeting-url").setAttribute("href", meetingURL);
       function generateRandomText(length) {
         const charset =
           "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"; // Characters pool
