--- a/meeting.html
+++ b/meeting.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <div style="height: 700px" id="jitsi-container"></div>
+    <div style="height: 700px" id="jitsi-container2"></div>
     <div class="meeting">
       Meeting URL is:
       <a id="meeting-url"></a>
