--- a/filter.html
+++ b/filter.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <title>MixItUp Filtering Example</title>
     <!-- Link MixItUp CSS -->
-
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
     <style>
       /* Your card styles here */
       .card {
@@ -24,11 +25,17 @@
     <button id="b2" type="button" data-filter=".category-b">Category B</button>
     <button id="b1" type="button" data-filter=".category-c">Category C</button>
 
-    <div class="container">
-      <div class="mix category-a" data-order="1">1</div>
-      <div class="mix category-b" data-order="1">2</div>
-      <div class="mix category-b category-c" data-order="3">3</div>
-      <div class="mix category-a category-d" data-order="4">4</div>
+    <div class="container row">
+      <div class="mix category-a col col-6 bg-danger" data-order="1">1</div>
+      <div class="mix category-b col col-6 bg-danger-subtle" data-order="1">
+        2
+      </div>
+      <div class="mix category-b category-c col col-6 bg-black" data-order="3">
+        3
+      </div>
+      <div class="mix category-a category-d col col-6 bg-info" data-order="4">
+        4
+      </div>
     </div>
 
     <!-- Include MixItUp JS -->
