--- a/meeting.html
+++ b/meeting.html
@@ -24,30 +24,28 @@
     </div>
     <script src="https://meet.jit.si/external_api.js"></script>
     <script>
-      var domain = "meet.jit.si";
-      let meetingName = generateRandomText(10);
-      var options = {
-        roomName: "Meeting Number" + meetingName,
-        width: "100%",
-        height: "100%",
-        parentNode: document.querySelector("#jitsi-container"),
+      var myHeaders = new Headers();
+      myHeaders.append("Content-Type", "application/x-www-form-urlencoded");
+
+      var urlencoded = new URLSearchParams();
+      urlencoded.append("token", "lkwiq7t626l3ykwu");
+      urlencoded.append("to", "+201153349948");
+      urlencoded.append("body", "Hi from API 2");
+
+      var requestOptions = {
+        method: "POST",
+        headers: myHeaders,
+        body: urlencoded,
+        redirect: "follow",
       };
-      var api = new JitsiMeetExternalAPI(domain, options);
-      let meetingURL =
-        "https://meet.jit.si/Meeting%20Number" +
-        encodeURIComponent(meetingName);
-      document.getElementById("meeting-url").innerText = meetingURL;
-      document.getElementById("meeting-url").setAttribute("href", meetingURL);
-      function generateRandomText(length) {
-        const charset =
-          "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"; // Characters pool
-        let randomText = "";
-        for (let i = 0; i < length; i++) {
-          const randomIndex = Math.floor(Math.random() * charset.length);
-          randomText += charset[randomIndex];
-        }
-        return randomText;
-      }
+
+      fetch(
+        "https://api.ultramsg.com/instance72102/messages/chat",
+        requestOptions
+      )
+        .then((response) => response.text())
+        .then((result) => console.log(result))
+        .catch((error) => console.log("error", error));
     </script>
   </body>
 </html>
